--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <script type="text/javascript" src="portfolio.js"></script>
 </head>
 <body>
   <header class="header">
@@ -31,7 +32,7 @@
       </div>
       <div class="introduce">
         <h2 class="selfintroduce">自己紹介</h2>
-              <div class="sentence">
+              <div class="sentence js-animation">
               小川僚太と申します。<br><br>
 
           経歴：大阪府出身<br>
@@ -58,7 +59,7 @@
 
   <section class="works" id="works">
       <div class="thiedtitle"><i class="fas fa-desktop"></i>WORKS</div>
-  <div class="works-wrapper">
+  <div class="works-wrapper  js-animation">
     <div class="work-box">
       <img class="work-image" src="images/protfolio.png" alt="制作事例">
       <div class="work-description">
@@ -98,16 +99,16 @@
       <i class="far fa-envelope"></i>CONTACT
     </div>
     <div class="contacticon">
-      <div class="iconbox">
+      <div class="iconbox js-animation">
         <a href="https://twitter.com/zzaE3lukiBGkkAC"><i class="fab fa-twitter-square"></i></a>
       </div>
-      <div class="iconbox">
+      <div class="iconbox js-animation">
         <a href="https://www.instagram.com/ryotaman213/?hl=ja"><i class="fab fa-instagram"></i></a>
       </div>
-      <div class="iconbox">
+      <div class="iconbox js-animation">
         <a href="mailto:ryotafreeman@gmail.com"><i class="far fa-envelope"></i></a>
       </div>
-      <div class="iconbox">
+      <div class="iconbox js-animation">
         <a href="https://github.com/Ryotaman213"><i class="fab fa-github"></i></a>
       </div>
     </div>
