--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="work-box">
       <img class="work-image" src="images/repdiary.png" alt="制作事例">
       <div class="work-description">
-        Rep Diary<br>( Rails )<br><br>Progress<br>
+        Rep Diary<br>( Rails )<br><br><font color="red">Coming Soon</font><br>
         <a href="https://github.com/Ryotaman213/repdialy" class="button button-ghost">READ MORE</a>
       </div>
     </div>
@@ -87,7 +87,7 @@
     <div class="work-box">
       <img class="work-image" src="images/trickgames.png" alt="制作事例">
       <div class="work-description">
-        Trick Games<br>( SWIFT )<br><br>Progress<br>
+        Trick Games<br>( SWIFT )<br><br><font color="red">Coming Soon</font><br>
         <a href="https://github.com/Ryotaman213/TrickGames" class="button button-ghost">READ MORE</a>
       </div>
     </div>
