--- a/english.html
+++ b/english.html
@@ -31,30 +31,30 @@
     </div>
     <div class="profilecontent">
       <div class="profileicon"></div>
-      <div class="introduce">
-        <h2 class="selfintroduce">自己紹介</h2>
-              <div class="sentence js-animation">
-              小川僚太と申します。<br><br>
+    <div class="introduce">
+      <h2 class="selfintroduce">Introduction</h2>
+            <div class="sentence js-animation">
+            I am Ryota Ogawa.<br><br>
 
-          経歴：大阪府出身<br>
-               2009年に大阪経済大学卒業。<br>
-               6年1ヶ月間 京都中央信用金庫で勤務。<br>
-               <br>
-               御嶽山の噴火を期に、後悔のない人生の為に退職。<br>
-               <br>
-               カナダへのワーキングホリデーを行う。<br>
-               日本人がいないレストランで皿洗いからシェフへとなる。<br>
-               <br>
-               帰国後は岐阜県の雪山で、パークディガーとして勤務。今の妻と出会う。<br>
-               <br>
-               愛知県で内装施工会社で勤務。<br>
-               設計希望したが、営業に配属となった為に1年間の勤務の後、退職。<br><br>
-               今までの経験と興味のあるPC業務で手に職が欲しいことよりプログラミングに興味を持つ。<br><br>
-               過去に独学で挫折した経験もあり、友人に技術者もいなかったため、学校での学習を決意。<br><br>
-               現在、TECH::EXPERTにてRuby on Rails中心にフルスタックエンジニアとなるべく学習中。<br>
-        </div>
+        Career：From OSAKA<br>
+             I graduated from Osaka University of Economics in 2009.<br>
+             I'd worked at Kyoto Chuo Shinkin Bank for 6years and 1month.<br>
+             <br>
+             I quited my job because of an eruption of Ontake Mountain<br>
+             <br>
+             After that, I did Working Holiday to Canada.<br>
+             And then, I became a chef from dishwasher.<br>
+             <br>
+             When I back to Japan, I worked at Ski Resort in Gifu perf.
+             I met my wife then.<br>
+             <br>
+             Worked at a conpany as interior work in Aich pref.<br>
+             I wanted to do interior design by PC but I'was assignmented to sales.<br><br>
+             From my history and experience, I've been interested in programming.<br><br>
+             I'd failed self‐education so I decide to study at school.<br><br>
+             Currently,I'm studying at TECH::EXPERT with Ruby on Rails for full-stack enginner.<br>
       </div>
-      </div>
+    </div>
   </section>
 
   <section class="works" id="works">
