--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <script type="text/javascript" src="portfolio.js"></script>
-    <language initial="ja" lang="ja,en"></language>
+  <script type="text/javascript" src="portfolio.js"></script>s
 </head>
 <body>
   <header class="header">
