--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <script type="text/javascript" src="portfolio.js"></script>s
+  <script type="text/javascript" src="portfolio.js"></script>
 </head>
 <body>
   <header class="header">
