--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header class="header">
-    <a class="language" href="english.html">🇺🇸</a><a class="languageja" href="index.html">🇯🇵</a>
+    <a id="language" href="english.html">🇺🇸</a><a id="languageja" href="index.html">🇯🇵</a>
     <div class="headercontent">
       <p class="pf-title">OGAWA RYOTA'S portfolio</p>
       <h1 class="site-title">MY WORKS</h1>
